--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,14 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     height: 100vh;
 }
 
 button {
     min-width: 100px;
-    transition: 0.2s;
     margin: 0 5px;
-    
+    transition: 0.2s;
+
     &:hover {
         transform: scale(1.05);
     }
