--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -4,32 +4,45 @@
     <mat-card-title>Login</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
+    <form #loginForm="ngForm" (ngSubmit)="userLogin(loginForm)">
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.user_name"
+          ngModel
+          #user_name="ngModel"
           placeholder="Username"
           type="text"
+          pattern="[A-Za-z0-9_-]{1,}"
           name="user_name"
           required
         />
+        <mat-error *ngIf="user_name.invalid">
+          Please use alphanumeric characters only.
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.password"
+          ngModel
+          #password="ngModel"
           type="password"
           placeholder="Password"
           name="password"
           required
+          minlength="8"
+          maxlength="20"
         />
+        <mat-error *ngIf="password.invalid">
+          Your password must be 8-20 characters long.
+        </mat-error>
       </mat-form-field>
+      <button
+        mat-raised-button
+        color="primary"
+        [disabled]="!loginForm.form.valid"
+      >
+        Submit
+      </button>
     </form>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="userLogin()" color="primary">
-      Submit
-    </button>
-  </mat-card-actions>
 </mat-card>
