--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -4,51 +4,73 @@
     <mat-card-title>Sign Up!</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
+    <form
+      #registrationForm="ngForm"
+      (ngSubmit)="registerUser(registrationForm)"
+    >
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.user_name"
+          ngModel
+          #user_name="ngModel"
           placeholder="Username"
           type="text"
+          pattern="[A-Za-z0-9_-]{1,}"
           name="user_name"
           required
         />
+        <mat-error *ngIf="user_name.invalid">
+          Please use alphanumeric characters only.
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.password"
+          ngModel
+          #password="ngModel"
           type="password"
           placeholder="Password"
           name="password"
           required
+          minlength="8"
+          maxlength="20"
         />
+        <mat-error *ngIf="password.invalid">
+          Your password must be 8-20 characters long.
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.email"
+          ngModel
+          #email="ngModel"
           type="email"
-          placeholder="Email"
+          placeholder="your@mail.com"
           name="email"
           required
+          email
         />
+        <mat-error *ngIf="email.invalid">
+          This is not a valid mail adress.
+        </mat-error>
       </mat-form-field>
       <mat-form-field>
         <input
           matInput
-          [(ngModel)]="userData.birth_date"
+          ngModel
           type="date"
           placeholder="Birthday"
           name="birth_date"
+          required
         />
       </mat-form-field>
+      <button
+        mat-raised-button
+        color="primary"
+        [disabled]="!registrationForm.form.valid"
+      >
+        Sign Up
+      </button>
     </form>
   </mat-card-content>
-  <mat-card-actions>
-    <button mat-raised-button (click)="registerUser()" color="primary">
-      Sign Up
-    </button>
-  </mat-card-actions>
 </mat-card>
