--- a/src/app/user-registration-form/user-registration-form.component.html
+++ b/src/app/user-registration-form/user-registration-form.component.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <mat-card>
   <mat-card-header>
-    <mat-card-title>Sign Up!</mat-card-title>
+    <mat-card-title>Sign Up</mat-card-title>
   </mat-card-header>
   <mat-card-content>
     <form
