--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,6 +62,7 @@ mat-dialog-container {
   button {
     width: 100%;
     transition: 0.2s !important;
+    margin-top: 10px !important;
 
     &:hover {
       transform: scale(1.025);
