--- a/src/app/actors/actors.component.html
+++ b/src/app/actors/actors.component.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Starring:</mat-card-title>
-  </mat-card-header>
-  <mat-card-content *ngFor="let actor of data.actors; let last = last">
-    <span *ngIf="!last">{{ actor }}, </span>
-    <span *ngIf="last">{{ actor }}</span>
-  </mat-card-content>
-</mat-card>
+<mat-dialog-content>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Starring:</mat-card-title>
+    </mat-card-header>
+    <mat-card-content *ngFor="let actor of data.actors; let last = last">
+      <span *ngIf="!last">{{ actor }}, </span>
+      <span *ngIf="last">{{ actor }}</span>
+    </mat-card-content>
+  </mat-card>
+</mat-dialog-content>
