--- a/src/app/synopsis/synopsis.component.html
+++ b/src/app/synopsis/synopsis.component.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Description:</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    {{ data.description }}
-  </mat-card-content>
-</mat-card>
+<mat-dialog-content>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>Description:</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      {{ data.description }}
+    </mat-card-content>
+  </mat-card>
+</mat-dialog-content>
